--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,17 @@
 .image-gallery-swipe {
   border: 2px solid black;
 }
+
+section {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5%;
+  margin: 5%;
+
+  justify-content: center;
+  align-items: center;
+}
+
+p {
+  text-align: justify;
+}
